Introduce interface for weather service

--- a/telerik-getting-started/_Imports.razor
+++ b/telerik-getting-started/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using telerik_getting_started
+@using telerik_getting_started.Data
 @using telerik_getting_started.Shared
