--- a/src/ConfigSetup.Web/Components/App.razor
+++ b/src/ConfigSetup.Web/Components/App.razor
@@ -14,6 +14,7 @@
 
 <body>
     <Routes />
+    <script src="js/configSetup.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
