--- a/src/ConfigSetup.Web/Components/App.razor
+++ b/src/ConfigSetup.Web/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="ConfigSetup.Web.styles.css" />
+    <link rel="stylesheet" href="@($"{typeof(App).Assembly.GetName().Name}.styles.css")" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
